--- a/todo
+++ b/todo
@@ -3,3 +3,17 @@
 -classe channel et commande
 -commande, pointeur sur fonction
 -recuperer et stocker nickname etc
+
+nick
+cap ls
+user
+mode i t k o l
+pass
+join
+privmsg
+msg
+kick
+invite
+topic
+
+prendre en compte ctrl D
